fix bug: chatItem can't be clicked on mobile-mode

--- a/demo/src/layout/style/index.less
+++ b/demo/src/layout/style/index.less
@@ -80,7 +80,7 @@ body {
         top: 0px;
         left: 0;
         bottom: 0;
-        //z-index: 99;
+        z-index: 99;
         transition: all .3s @ease-out;
         background: #fff;
         border-right: 1px solid #d6dce0;
